--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
+    "remixicon": "^4.6.0",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
